--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "init": "^0.1.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
